#62 fixed product detail text alignment

--- a/frontend/src/Components/Products/ProductDetails/productdetails.module.css
+++ b/frontend/src/Components/Products/ProductDetails/productdetails.module.css
@@ -13,10 +13,6 @@
     color:  #36454f;
 }
 
-.ProductInfo hr {
-    width: 80%;
-}
-
 .ProductInfo{
     display: flex;
     flex-direction: column;
@@ -29,13 +25,19 @@
     margin: 40px;
 }
 
-.ProductInfo button{
-    margin:20px;
-}
-
 .ProductInfo hr {
     width: 80%;
 }
+
+.ProductInfo button{
+    margin: 10px;
+}
+
+.ProductInfo p {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 
 .ProductInfo textarea {
     border-color: #36454f;
@@ -89,7 +91,7 @@
 @media (max-width: 600px) {
     .ProductInfo {
         width: 400px;
-        height: 400px;
+        height: 500px;
     }
 
 }
@@ -97,7 +99,7 @@
 @media (max-width: 500px) {
     .ProductInfo {
         width: 350px;
-        height: 400px;
+        height: 500px;
     }
 
 }
